@@ -1321,7 +1321,6 @@ WIDGET_DEFAULT = {
         "display_height": 60,
         "display_margin": 2,
         "display_scale": 2,
-        "show_vertical_style": False,
         "show_inverted_pedal": False,
         "show_inverted_trailing": True,
         "show_throttle": True,
